docker-main-master-f4fe57e21023db3e031fb3de8c881a2413eea8ba/environments/int/pods/lb-nginx/nginx-ingress-lb-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sysops
