docker-main-master-f4fe57e21023db3e031fb3de8c881a2413eea8ba/environments/int/pods/lb-nginx/nginx-ingress-lb-ingress.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-lb
  namespace: default
spec:
  rules:
  - host: int.wtransnet.com
    http:
      paths:
      - path: /tracking
        backend:
          serviceName: web-nginx-tracking
          servicePort: 80
      - path: /adm
        backend:
          serviceName: web-nginx-adm
          servicePort: 80
  - host: app-int.wtransnet.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web-nginx
          servicePort: 80
      - path: /bridge-wtn3
        backend:
          serviceName: wtn-bridge-wtn3
          servicePort: 8080
      - path:  /tracking
        backend:
          serviceName: wtn-tracking
          servicePort: 8080
      - path: /auth
        backend:
          serviceName: wtn-auth
          servicePort: 8080
      - path: /file-upload
        backend:
          serviceName: wtn-file-upload
          servicePort: 8080
      - path: /remote-log
        backend:
          serviceName: wtn-remote-log
          servicePort: 8080
      - path: /credit
        backend:
          serviceName: wtn-credit
          servicePort: 8080
      - path: /geo-searcher
        backend:
          serviceName: wtn-geo-searcher
          servicePort: 8080
      - path: /audit
        backend:
          serviceName: wtn-audit
          servicePort: 8080
      - path: /integration
        backend:
          serviceName: wtn-integration
          servicePort: 8080
